--- a/src/Components/Logo/logo.css
+++ b/src/Components/Logo/logo.css
@@ -3,7 +3,17 @@ img {
 	height: auto;
 }
 
-.logo {
+.logo-conatiner {
 	display: flex;
 	justify-content: flex-start;
+}
+
+.logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
